# OpenMECP

./: Cargo.toml  LICENSE  README.md
.github/workflows/: omecp.yml  omecp.yml_error
src/: checkpoint.rs  cleanup.rs  config.rs  constraints.rs  gdiis.rs  gediis.rs  geometry.rs  help.rs  hessian_update.rs  io.rs  lib.rs  lst.rs  main.rs  naming.rs  optimizer.rs  parser.rs  pes_scan.rs  qm_interface.rs  reaction_path.rs  settings.rs  template_generator.rs  validation.rs
tests/: test_dihedral.rs  test_parser.rs
