[package]
name = "omecp"
version = "0.0.1"
edition = "2021"
authors = ["Le Nhan Pham"]

[dependencies]
# Linear algebra
nalgebra = "0.32"

lazy_static = "1.5.0"

# File I/O & parsing
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
configparser = "3.0"

# Error handling
thiserror = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"

# I/O & system
tempfile = "3.8"

[dev-dependencies]
cargo-hack = "0.5"
